--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,6 @@
 #!/usr/bin/make -f
 
+export DH_GOLANG_INSTALL_EXTRA := test.htdigest test.htpasswd
+
 %:
-	dh $@
+	dh $@ --buildsystem=golang --with=golang
